--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CAPITAL Trivia</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <title>Trivia</title>
 </head>
+
 <body>
-        <button id="btn">Start Game</button>
-        <div id="showQuestion"></div>
-        <div id="showPossibleAnswers"></div>
-    
-            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <body background="assets/images/pdtropical-adj-21_2.jpg">
+        <div class="wholeContainer">
+            <div class="header">
+                <h1><u>TRIVIA</u><span id="headerText"></span></h1>
+            </div>
+            <button id="btn"><b>Start Game</b></button>
+            <div class="container">
+                <div id="showQuestion"></div>
+                <div id="showPossibleAnswers"></div>
+            </div>
+        </div>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="./assets/javascript/game.js"></script>
-</body>
+    </body>
+
 </html>
