--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
             <div class="header">
                 <h1><u>TRIVIA</u><span id="headerText"></span></h1>
             </div>
-            <button id="btn"><b>Start Game</b></button>
+            <div id="button">
+                <button id="start"><b>Start Game</b></button>
+            </div>
             <div class="container">
-                <div id="showQuestion"></div>
-                <div id="showPossibleAnswers"></div>
+                <div class="text">
+                    <div id="showQuestion"></div>
+                    <div id="showPossibleAnswers"></div>
+                </div>
+                <div id="image-holder"></div>
             </div>
         </div>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="./assets/javascript/game.js"></script>
+        <script src="assets/javascript/game.js"></script>
     </body>
 
 </html>
