button empty, time remaining, cleaning up showTrivia function

--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
     <body background="assets/images/pdtropical-adj-21_2.jpg">
         <div class="wholeContainer">
             <div class="header">
-                <h1><u>TRIVIA</u><span id="headerText"></span></h1>
+                <h1><u>TICK-TOCK TRIVIA</u><span id="headerText"></span></h1>
             </div>
             <div id="button">
                 <button id="start"><b>Start Game</b></button>
+                <br>
             </div>
             <div class="container">
                 <div class="text">
+                    <div id = "timeRemain"><b></b></div>
+                    <br>
                     <div id="showQuestion"></div>
+                    <br>
                     <div id="showPossibleAnswers"></div>
                 </div>
                 <div id="image-holder"></div>
