--- a/index.html
+++ b/index.html
@@ -23,11 +23,18 @@
             </div>
             <div class="container">
                 <div class="text">
-                    <div id = "timeRemain"><b></b></div>
+                    <div id="timeRemain"><b></b></div>
                     <br>
                     <div id="showQuestion"></div>
                     <br>
                     <div id="showPossibleAnswers"></div>
+                </div>
+                <div class="final screen">
+                    <div id="correct"></div>
+                    <div id="incorrect"></div>
+                    <div id="unanswered"></div>
+                    <div id="final-screen-text"></div>
+                    <!-- add start again button -->
                 </div>
                 <div id="image-holder"></div>
             </div>
