--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
                     <div id="showQuestion"></div>
                     <br>
                     <div id="showPossibleAnswers"></div>
+                    <div id="showAnswer"></div>
                 </div>
-                <div class="final screen">
+                <div class="finalScreen">
+                    <div id="final-screen-text"></div>
                     <div id="correct"></div>
                     <div id="incorrect"></div>
                     <div id="unanswered"></div>
-                    <div id="final-screen-text"></div>
+                    <div id="button2"></div>
                     <!-- add start again button -->
                 </div>
                 <div id="image-holder"></div>
