--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <div id="showQuestion"></div>
                     <br>
                     <div id="showPossibleAnswers"></div>
+                    <div id = "buttons"></div>
                     <div id="showAnswer"></div>
                 </div>
                 <div class="finalScreen">
