--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
                     <br>
                     <div id="showQuestion"></div>
                     <br>
-                    <div id="showPossibleAnswers"></div>
+                    <div id="showPossibleAnswers">
+                    <button class = "choice" id = "choice1"></button>
+                    <button class = "choice" id = "choice2"></button>
+                    <button class = "choice" id = "choice3"></button>
+                    <button class = "choice" id = "choice4"></button>
+                </div>
+
                     <div id = "buttons"></div>
                     <div id="showAnswer"></div>
                 </div>
